--- a/Frontend/src/app/cadastro/cadastro.component.html
+++ b/Frontend/src/app/cadastro/cadastro.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row" fxLayoutAlign="center">
     <div fxLayout="column" fxFlex="900px">
-        <form class="mt-60" #clientesFrm="ngForm">
+        <form class="mt-60" #clientesFrm="ngForm" (ngSubmit)="salvar()">
             <mat-card>
                 <mat-card-header>
                     <mat-card-title>Dados Pessoais</mat-card-title>
@@ -10,7 +10,12 @@
                         <div fxLayout="column" fxFlex="800px">
                             <mat-form-field class="full-width">
                                 <mat-label>Nome: *</mat-label>
-                                <input type="text" placeholder="José Carlos" matInput />
+                                <input type="text"
+                                    placeholder="José Carlos"
+                                    matInput
+                                    [(ngModel)]="cliente.nome"
+                                    name="nome"
+                                />
                             </mat-form-field>
                         </div>
                     </div>
@@ -18,7 +23,12 @@
                         <div fxLayout="column" fxFlex="800px">
                             <mat-form-field class="full-width">
                                 <mat-label>E-mail: *</mat-label>
-                                <input type="email" placeholder="Digite seu E-mail" matInput />
+                                <input type="email"
+                                    placeholder="Digite seu E-mail"
+                                    matInput
+                                    [(ngModel)]="cliente.email"
+                                    name="email"
+                                />
                             </mat-form-field>
                         </div>
                     </div>
@@ -26,7 +36,12 @@
                         <div fxLayout="column" fxFlex="400px">
                             <mat-form-field class="full-width">
                                 <mat-label>CPF: *</mat-label>
-                                <input type="text" placeholder="Digite seu CPF" matInput />
+                                <input type="text"
+                                    placeholder="Digite seu CPF"
+                                    matInput
+                                    [(ngModel)]="cliente.cpf"
+                                    name="cpf"
+                                />
                             </mat-form-field>
                         </div>
                     </div>
@@ -34,13 +49,18 @@
                         <div fxLayout="column" fxFlex="400px">
                             <mat-form-field class="full-width">
                                 <mat-label>Nascimento: *</mat-label>
-                                <input type="text" placeholder="Digite sua data de nascimento" matInput />
+                                <input type="text"
+                                    placeholder="Digite sua data de nascimento"
+                                    matInput
+                                    [(ngModel)]="cliente.dataNascimento"
+                                    name="dataNascimento"
+                                />
                             </mat-form-field>
                         </div>
                     </div>
                 </mat-card-content>
                 <mat-card-actions>
-                    <button mat-flat-button color="primary">
+                    <button mat-flat-button color="primary" type="submit">
                         <mat-icon fontIcon="save"></mat-icon>
                         Salvar
                     </button>
